# turnkey-sysinfo

./: Makefile  disk.py  memstats.py  pyproject.toml  setup.py  turnkey-detect-virt  turnkey-sysinfo  turnkey-sysinfo.py  turnkey-version
contrib/: motd
debian/: control  copyright  rules  turnkey-sysinfo.install
libsysinfo/: disk.py  memstats.py  virt.py
sysversion/: __init__.py
